fix : gap on sideBar footer

--- a/Front-end/src/component/ComponentCSS/SideBar.css
+++ b/Front-end/src/component/ComponentCSS/SideBar.css
@@ -1,7 +1,8 @@
 .aside-bottom{
     display: flex ;
     flex-direction: row ;
-    justify-content: space-between ;
+    justify-content: center ;
+    gap: 70% ;
     width: 100% ;
     height: 7.5%;
 }
